// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover closes when document has mousedown event 1`] = `
<div class="popover clay-popover-top hide ddm-share-url-popover" style="visibility: visible; display: none; top: 0px; left: 0px;">
  <div class="arrow"></div>
  <div class="popover-header">Liferay</div>
  <div class="popover-body"><span class="text-secondary">This content will be displayed when popover appears</span>0</div>
</div>
`;

exports[`Popover closes when it is already opened and the alignedElement is clicked 1`] = `
<div class="popover clay-popover-top ddm-share-url-popover" style="visibility: visible; display: none; top: 0px; left: 0px;">
  <div class="arrow"></div>
  <div class="popover-header">Liferay</div>
  <div class="popover-body"><span class="text-secondary">This content will be displayed when popover appears</span>0</div>
</div>
`;

exports[`Popover opens when alignedElement is clicked 1`] = `
<div class="popover clay-popover-none hide ddm-share-url-popover" style="display: none; visibility: visible;">
  <div class="popover-header">Liferay</div>
  <div class="popover-body"><span class="text-secondary">This content will be displayed when popover appears</span>0</div>
</div>
`;

exports[`Popover opens when the visible property changes 1`] = `
<div class="popover clay-popover-top ddm-share-url-popover" style="visibility: visible; top: 0px; left: 0px;">
  <div class="arrow"></div>
  <div class="popover-header">Liferay</div>
  <div class="popover-body"><span class="text-secondary">This content will be displayed when popover appears</span>0</div>
</div>
`;

exports[`Popover renders popover opened 1`] = `
<div class="popover clay-popover-none ddm-share-url-popover" style="visibility: visible; display: none;">
  <div class="popover-header">Liferay</div>
  <div class="popover-body"><span class="text-secondary">This content will be displayed when popover appears</span>0</div>
</div>
`;

exports[`Popover renders the default markup 1`] = `
<div class="popover clay-popover-none hide ddm-share-url-popover" style="display: none; visibility: visible;">
  <div class="popover-header">Liferay</div>
  <div class="popover-body"><span class="text-secondary">This content will be displayed when popover appears</span>0</div>
</div>
`;
